--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     {% include 'include/navbar.html' %}
+    {% include 'include/messages.html' %}
     {% block content %} {% endblock %}
     {% include 'include/footer.html' %}
 </body>
