update skill page  front

--- a/work/templates/work.html
+++ b/work/templates/work.html
@@ -12,16 +12,24 @@
 
 
 {% block content %}
-    <br>
+    
 
-        <div class="div-1" >
-            <p id="p-1"> در این صفحه هنوز چیزی قرار ندارد <br> در حال ساخت .... </p>
+    <div class="skills-box">
+        <div class="card-PersonalWeb">
+            <img src="../../static/work/photo/Personal-Web.png" class="PreavioPix">
+            <p>The backend of this website was with me</p>
+
+            <a href="https://khodewmj.pythonanywhere.com" target="_blank"><button id="WorkSample">Visit Website</button></a>
         </div>
+    </div>
 
-    <br>
+    <script>
+        // function workSampleLink() {
+        //     window.location.href = 'https://khodewmj.pythonanywhere.com/'
+        // }
+
+        // document.getElementById('WorkSample').addEventListener('click', workSampleLink)
+    </script>
+
+
 {% endblock %}
-
-
-
-
-
