--- a/static/work/style.css
+++ b/static/work/style.css
@@ -1,29 +1,73 @@
 *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
 }
-
 body{
-      height: 100vh;
       background-image: url("photo/work.jfif");
       background-size: cover;
       background-position: center;
       background-repeat: none;
 
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
 }
-
-
-.div-1{
+.skills-box{
+      width: 95%;
+      height: 520px;
       background: rgba(255, 255, 255, 0.121);
-      backdrop-filter: blur(20px);
-      width:95%; height: 85%;
-      border-radius:6px;
-      margin:auto;
-      padding:10px;
-}
+      backdrop-filter: blur(14px);
+      border-radius: 16px;
+      margin: 20px 0;
 
-#p-1{
-       color:#968383;
-       font-size:30px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      padding: 20px;
+}
+.card-PersonalWeb{
+      width: 200px;
+      height: 200px;
+      border: 1px solid #fff;
+      border-radius: 10px;
+      padding: 10px;
+      cursor: pointer;
+      transition: .5s all linear;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+}
+.card-PersonalWeb:hover{
+      width: 210px;
+      height: 210px;
+}
+.card-PersonalWeb .PreavioPix{
+      width: 180px;
+      height: 100px;
+      border-radius: 8px;
+}
+.card-PersonalWeb p{
+      color: #fff;
+      text-align: center;
+      font-weight: 400;
+}
+.card-PersonalWeb button{
+      outline: none;
+      text-decoration: none;
+      width: 100px;
+      height: 35px;
+      border: 2px solid green;
+      background: transparent;
+      border-radius: 8px;
+      color: #fff;
+      font-weight: 500;
+      letter-spacing: .5px;
+      font-size: 13px;
+}
+.card-PersonalWeb button:hover{
+      background: green;
+      color: #fff;
 }
